[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "pft-portfolio"
version = "0.1.0"
description = "CSV-first portfolio history ingestion and exporter scaffold for Post Fiat."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Post Fiat" }
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only"
]

[project.optional-dependencies]
exchange = ["ccxt>=4"]
test = ["pytest>=8", "ccxt>=4"]

[project.scripts]
pft-portfolio = "pft_portfolio.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
  "live: tests that call public exchange, chain, or RPC endpoints"
]
